error.log
/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:15
const logger
      ^^^^^^

SyntaxError: Missing initializer in const declaration
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1031:15)
    at Module._compile (node:internal/modules/cjs/loader:1065:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/Users/sergionov/Projects/transplant.net/node/server.js:3:16)
    at Module._compile (node:internal/modules/cjs/loader:1101:14)
/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:15
const logger
      ^^^^^^

SyntaxError: Missing initializer in const declaration
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1031:15)
    at Module._compile (node:internal/modules/cjs/loader:1065:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/Users/sergionov/Projects/transplant.net/node/server.js:3:16)
    at Module._compile (node:internal/modules/cjs/loader:1101:14)
/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:97
            asyncLocalStorage.run(idSeq++, () => {
            ^

ReferenceError: asyncLocalStorage is not defined
    at Server.<anonymous> (/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:97:13)
    at Server.emit (node:events:390:28)
    at parserOnIncoming (node:_http_server:946:12)
    at HTTPParser.parserOnHeadersComplete (node:_http_common:128:17)
/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:97
            logger.run(idSeq++, () => {
                   ^

TypeError: logger.run is not a function
    at Server.<anonymous> (/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:97:20)
    at Server.emit (node:events:390:28)
    at parserOnIncoming (node:_http_server:946:12)
    at HTTPParser.parserOnHeadersComplete (node:_http_common:128:17)
/Users/sergionov/Projects/transplant.net/node/utils/Logger.js:15
module.exports = ;
                 ^

SyntaxError: Unexpected token ';'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1031:15)
    at Module._compile (node:internal/modules/cjs/loader:1065:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:15:16)
    at Module._compile (node:internal/modules/cjs/loader:1101:14)
/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:17
logger.info();
       ^

TypeError: logger.info is not a function
    at Object.<anonymous> (/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:17:8)
    at Module._compile (node:internal/modules/cjs/loader:1101:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/Users/sergionov/Projects/transplant.net/node/server.js:3:16)
    at Module._compile (node:internal/modules/cjs/loader:1101:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:17
logger.info();
^

ReferenceError: logger is not defined
    at Object.<anonymous> (/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:17:1)
    at Module._compile (node:internal/modules/cjs/loader:1101:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/Users/sergionov/Projects/transplant.net/node/server.js:3:16)
    at Module._compile (node:internal/modules/cjs/loader:1101:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:97
            logger.run(idSeq++, () => {
                   ^

TypeError: logger.run is not a function
    at Server.<anonymous> (/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:97:20)
    at Server.emit (node:events:390:28)
    at parserOnIncoming (node:_http_server:946:12)
    at HTTPParser.parserOnHeadersComplete (node:_http_common:128:17)
/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:80
            asyncLocalStorage.run(idSeq++, () => {
                              ^

ReferenceError: idSeq is not defined
    at Server.<anonymous> (/Users/sergionov/Projects/transplant.net/node/scripts/http-server.js:80:31)
    at Server.emit (node:events:390:28)
    at parserOnIncoming (node:_http_server:946:12)
    at HTTPParser.parserOnHeadersComplete (node:_http_common:128:17)
